--- a/haproxy/result_haproxy.cfg
+++ b/haproxy/result_haproxy.cfg
@@ -18,3 +18,6 @@ backend http_back
 #   server node1 192.168.99.116:8888 check
 #   server node2 192.168.99.117:8888 check
 #   server node3 192.168.99.118:8888 check
+   server node1 192.168.99.115:8888 check
+   server node1 192.168.99.116:8888 check
+   server node1 192.168.99.117:8888 check
