--- a/src/docker-compose_spark.yml
+++ b/src/docker-compose_spark.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
  master:
   image: gettyimages/spark
-  command: bin/spark-class org.apache.spark.deploy.master.Master -h master
+  command: bin/spark-class org.apache.spark.deploy.master.Master -h 0.0.0.0
   hostname: master
   environment:
     MASTER: spark://master:7077
