--- a/src/docker-compose_spark.yml
+++ b/src/docker-compose_spark.yml
@@ -1,5 +1,6 @@
-version: "3"
+version: "3.3"
 services:
+ 
  master:
   image: gettyimages/spark
   command: bin/spark-class org.apache.spark.deploy.master.Master -h 0.0.0.0
@@ -18,29 +19,14 @@ services:
     - ./data:/tmp/data
   networks:
     - webnet
-    
- web:
-  # replace username/repo:tag with your name and image details
-  image: harryyhzhang/quickstart-python
-  deploy:
-   replicas: 5
-   resources:
-    limits:
-     cpus: "0.1"
-     memory: 50M
-   restart_policy:
-    condition: on-failure
-  ports:
-   - "8888:80"
-  networks:
-   - webnet
+     
    
  worker:
   image: gettyimages/spark
   command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
   hostname: worker
   deploy:
-   replicas: 3
+   replicas: 1
   environment:
     SPARK_CONF_DIR: /conf
     SPARK_WORKER_CORES: 2
@@ -57,17 +43,7 @@ services:
     - ./data2:/tmp/data
   networks:
     - webnet
-    
- visualizer:
-  image: dockersamples/visualizer:stable
-  ports:
-   - "9090:8080"
-  volumes:
-   - "/var/run/docker.sock:/var/run/docker.sock"
-  deploy:
-   placement:
-    constraints: [node.role == manager]
-  networks:
-   - webnet
+     
 networks:
- webnet:    
+ webnet:
+    attachable: true
