--- a/src/docker-compose_spark.yml
+++ b/src/docker-compose_spark.yml
@@ -40,7 +40,7 @@ services:
     - 8081:8081
   volumes:
     - ./conf/worker:/conf
-    - ./data2:/tmp/data
+    - ./data:/tmp/data
   networks:
     - webnet
      
