--- a/src/docker-compose_analysis.yml
+++ b/src/docker-compose_analysis.yml
@@ -1,10 +1,6 @@
-version: "3.3"
+version: "3.3" 
+
 services:
- rstudio:
-  image: harryyhzhang/rstudio:3.0
-  ports:
-    - 8787:8787
- 
  master:
   image: harryyhzhang/spark
   command: bin/spark-class org.apache.spark.deploy.master.Master -h 0.0.0.0
@@ -47,19 +43,79 @@ services:
     - ./data:/tmp/data
   networks:
     - webnet
+ 
+ namenode:
+    image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
+    volumes:
+      - namenode:/hadoop/dfs/name
+    environment:
+      - CLUSTER_NAME=test
+    env_file:
+      - ./hadoop-hive.env
+    ports:
+      - "50070:50070"
+
+ datanode:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    volumes:
+      - datanode:/hadoop/dfs/data
+    env_file:
+      - ./hadoop-hive.env
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070"
+    ports:
+      - "50075:50075"
+      
+ hue:
+    image: gethue/hue:latest
+    command: bash -c "sed -i -e 's/## hive_server_host=localhost/hive_server_host=192.168.99.100/g' /hue/desktop/conf/pseudo-distributed.ini && /hue/build/env/bin/hue runserver_plus 0.0.0.0:8888 " 
+    container_name: hue
+    ports:
+      - "8888:8888"  
+      
+ hive-server:
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    
+    env_file:
+      - ./hadoop-hive.env
+    environment:
+      HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
+      SERVICE_PRECONDITION: "hive-metastore:9083"
+    ports:
+      - "10000:10000"
+  
+ hive-metastore:
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    env_file:
+      - ./hadoop-hive.env
+    command: /opt/hive/bin/hive --service metastore
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
+  
+ hive-metastore-postgresql:
+    image: bde2020/hive-metastore-postgresql:2.3.0
+  
+ presto-coordinator:
+    image: shawnzhu/prestodb:0.181
+    ports:
+      - "9091:8080"
     
  visualizer:
-  image: dockersamples/visualizer:stable
-  ports:
-   - "9090:8080"
-  volumes:
-   - "/var/run/docker.sock:/var/run/docker.sock"
-  deploy:
-   placement:
-    constraints: [node.role == manager]
-  networks:
-   - webnet  
+   image: dockersamples/visualizer:stable
+   ports:
+    - "9090:8080"
+   volumes:
+    - "/var/run/docker.sock:/var/run/docker.sock"
+   deploy:
+    placement:
+     constraints: [node.role == manager]
+   networks:
+    - webnet  
    
+volumes:
+  namenode:
+  datanode:
+  
 networks:
  webnet:
     attachable: true
