--- a/vagrantfile
+++ b/vagrantfile
@@ -7,7 +7,8 @@ Vagrant.configure("2") do |config|
 			node.ssh.password = "vagrant"
 			
 			node.vm.provider "virtualbox" do |vb|
-				vb.customize ['modifyvm', :id, "--memory", 4096]
+				vb.cpus = 4
+				vb.customize ['modifyvm', :id, "--memory", 12288]
 				 # Change the network adapter type and promiscuous mode
 				vb.customize ['modifyvm', :id, '--nictype1', 'Am79C973']
 				vb.customize ['modifyvm', :id, '--nicpromisc1', 'allow-all']
