--- a/src/docker-compose_hive.yml
+++ b/src/docker-compose_hive.yml
@@ -86,6 +86,38 @@ services:
     networks:
       webnet:
         ipv4_address: 192.168.33.16
+        
+  historyserver:
+    image: bde2020/hadoop-historyserver:1.1.0-hadoop2.7.1-java8
+    ports:
+      - "8188:8188"
+    hostname: historyserver  
+    container_name: historyserver
+    depends_on:
+      - namenode
+      - datanode
+    volumes:
+      - hadoop_historyserver:/hadoop/yarn/timeline
+    env_file:
+      - ./hadoop.env
+    networks:
+     webnet:
+       ipv4_address: 192.168.33.17  
+
+  resourcemanager:
+    image: bde2020/hadoop-resourcemanager:1.1.0-hadoop2.7.1-java8
+    ports:
+      - "8088:8088"
+    hostname: resourcemanager  
+    container_name: resourcemanager
+    depends_on:
+      - namenode
+      - datanode 
+    env_file:
+      - ./hadoop.env
+    networks:
+     webnet:
+       ipv4_address: 192.168.33.18      
 
 networks:
  webnet:
@@ -95,3 +127,4 @@ networks:
 volumes:
   namenode:
   datanode:
+  hadoop_historyserver:
