change yml to start hive cluster

--- a/src/docker-compose_rstudioserver2.yml
+++ b/src/docker-compose_rstudioserver2.yml
@@ -6,14 +6,10 @@ services:
     image: harryyhzhang/hadoop2.7hive2.3.2spark2.0.2r3.4
     ports:
       - "50070:50070"
-    hostname: namenode  
+    hostname: testbed-master  
     container_name: namenode  
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
-    environment:
-      - CLUSTER_NAME=test
-    env_file:
-      - ./hadoop-hive.env
     networks:
       webnet:
         ipv4_address: 192.168.33.2
@@ -22,10 +18,7 @@ services:
     image: harryyhzhang/hadoop2.7hive2.3.2spark2.0.2r3.4
     volumes:
       - hadoop_datanode1:/hadoop/dfs/data
-    environment:
-      SERVICE_PRECONDITION: "namenode:50070"
-    ports:
-      - "50075:50075"
+    hostname: testbed-slave-1  
     networks:
       webnet:
         ipv4_address: 192.168.33.3
@@ -33,11 +26,8 @@ services:
   datanode2:
     image: harryyhzhang/hadoop2.7hive2.3.2spark2.0.2r3.4
     volumes:
-      - hadoop_datanode2:/hadoop/dfs/data
-    environment:
-      SERVICE_PRECONDITION: "namenode:50070"
-    ports:
-      - "50075:50075"
+      - hadoop_datanode2:/hadoop/dfs/data     
+    hostname: testbed-slave-2  
     networks:
       webnet:
         ipv4_address: 192.168.33.4  
@@ -46,10 +36,7 @@ services:
     image: harryyhzhang/hadoop2.7hive2.3.2spark2.0.2r3.4
     volumes:
       - hadoop_datanode3:/hadoop/dfs/data
-    environment:
-      SERVICE_PRECONDITION: "namenode:50070"
-    ports:
-      - "50075:50075"
+    hostname: testbed-slave-3 
     networks:
       webnet:
         ipv4_address: 192.168.33.5        
