add hive env variable

--- a/src/sparkYarn1/Dockerfile
+++ b/src/sparkYarn1/Dockerfile
@@ -17,10 +17,11 @@ RUN usermod -aG sudo hduser
 RUN adduser   rstudio --gecos "First Last,RoomNumber,WorkPhone,HomePhone" --disabled-password
 RUN echo "rstudio:rstudio" | chpasswd 
 
-RUN su hduser
+#RUN su hduser
 #setup env variables in bash, but it may not be necessary
 RUN echo $'export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64  \n\
 export HADOOP_HOME=/usr/local/hadoop   \n\
+export HIVE_HOME=/usr/local/hive   \n\
 export SPARK_HOME=/usr/local/spark    \n\
 export PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin:$SPARK_HOME/bin:$SPARK_HOME:sbin  \n\
 ' >> ~/.profile
